# Crypto_Trading_Bot_App

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/analysis/: __init__.py  indicators.py  ranking.py  signal_generator.py
backend/app/api/: deps.py
backend/app/api/routes/: rankings.py  signals.py
backend/app/core/: config.py  db.py
backend/app/data/: aggregator.py  historical_loader.py  symbol_map.py
backend/app/data/sources/: base.py  coingecko.py
backend/app/engine/: broker.py  risk_manager.py  runner.py
backend/app/models/: db_models.py  repository.py
backend/app/scheduler/: jobs.py  pipeline.py
backend/app/schemas/: rankings.py  signals.py
backend/app/strategies/: __init__.py  base.py  bollinger_bands.py  ma_crossover.py  ml_base.py  registry.py  rsi_mean_reversion.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: CandlestickChart.tsx  EquityCurve.tsx  PortfolioCard.tsx  SignalFeed.tsx  StrategyConfigPanel.tsx
frontend/components/ui/: ActionBadge.tsx  Card.tsx
frontend/lib/: format.ts  mock-market-engine.ts  types.ts  use-mock-market.ts
