[project]
name = "ai-trader-backend"
version = "0.1.0"
description = "AI crypto trading agent — paper trading engine, backtester, and API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "ccxt>=4.4",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "numpy>=2.1",
    "redis>=5.2",
    "python-dotenv>=1.0",
    "requests>=2.32",
    # Pinned defensively (unlike the rest of this list): the original pandas-ta
    # PyPI package was hijacked in Sept 2025 (release history wiped, new
    # maintainer, new hard numba dependency). pandas-ta-classic is the
    # community continuation of the pre-hijack codebase.
    "pandas-ta-classic>=0.6.52,<0.7",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
